--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 				<p>Rich Village Roleplay, server GTA SA-MP yang menghadirkan pengalaman bermain roleplay yang seru dan mendebarkan. Bergabunglah bersama komunitas kami dan jadilah bagian dari petualangan yang tak terlupakan di kota fiksi yang penuh intrik dan kejahatan. Segera raih keberuntungan dan kekuasaan di Rich Village Roleplay! Ayo bergabung sekarang! </p>
 				
 				
-				 <button onclick="window.location.href='https://chat.whatsapp.com/DjraoSi1J3g11c0rsslHoY'"> <h2> Join Rich Village</button>
+				 <button onclick="window.location.href='https://chat.whatsapp.com/DjraoSi1J3g11c0rsslHoY'"> <h2> Join Rich Village</button> <br> <br>  <button onclick="window.location.href='https://chat.whatsapp.com/LlWVMrwmKB84JDM61QYhAl'"> <h2> DONATE</button>
     </center>
 				<style>
 								body
